logs/feincms-gallery.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/feincms_gallery-1.2.4.egg-info'...
Listing './lib/python3.5/site-packages/gallery'...
Compiling './lib/python3.5/site-packages/gallery/models.py'...
***   File "./lib/python3.5/site-packages/gallery/models.py", line 63
    raise ImproperlyConfigured, 'You have to add \'feincms.module.'\
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gallery/specs'...
Listing './lib/python3.5/site-packages/gallery/static'...
Listing './lib/python3.5/site-packages/gallery/static/admin'...
Listing './lib/python3.5/site-packages/gallery/static/admin/css'...
Listing './lib/python3.5/site-packages/gallery/static/content'...
Listing './lib/python3.5/site-packages/gallery/static/content/gallery'...
Listing './lib/python3.5/site-packages/gallery/static/content/gallery/images'...
Listing './lib/python3.5/site-packages/gallery/templates'...
Listing './lib/python3.5/site-packages/gallery/templates/admin'...
Listing './lib/python3.5/site-packages/gallery/templates/admin/gallery'...
Listing './lib/python3.5/site-packages/gallery/templates/admin/gallery/gallery'...
Listing './lib/python3.5/site-packages/gallery/templates/content'...
Listing './lib/python3.5/site-packages/gallery/templates/content/gallery'...
Listing './lib/python3.5/site-packages/gallery/templatetags'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
